--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1 class="library-title">Library</h1>
     <button class="add-book-btn">Add Book</button>
     <!-- Dialogs and Modals : Web Dev Simplified article -->
-    <dialog>
-        <form method="dialog">
+    <dialog id="new-book-dialog">
+        <form id="new-book-form">
             <div>
                 <label>Book Title</label>
                 <input type="text" id="inputTitle" required/>
@@ -23,7 +23,7 @@
             </div>
             <div>
                 <label>Page Count</label>
-                <input type="number" id="inputPageCount" required/>
+                <input type="number" id="inputPageCount" min="1" pattern="\d+" title="Please enter a positive integer." required/>
             </div>
             <div>
                 <label>Completed</label>
@@ -40,6 +40,41 @@
             <td class="page-count">Page Count</td>
             <td class="completed">Completed</td>
             <td class="remove">Remove</td>
+        </tr>
+        <tr>
+            <td class="title">The Great Gatsby</td>
+            <td class="author">F.Scott Fitzgerald</td>
+            <td class="page-count">190</td>
+            <td class="completed">Completed</td>
+            <td class="remove"><button class="remove-btn">Remove</button></td>
+        </tr>
+        <tr>
+            <td class="title">The Picture of Dorian Grey</td>
+            <td class="author">Oscar Wilde</td>
+            <td class="page-count">256</td>
+            <td class="completed">Completed</td>
+            <td class="remove"><button class="remove-btn">Remove</button></td>
+        </tr>
+        <tr>
+            <td class="title">Romeo and Juliet</td>
+            <td class="author">William Shakespeare</td>
+            <td class="page-count">92</td>
+            <td class="completed">Completed</td>
+            <td class="remove"><button class="remove-btn">Remove</button></td>
+        </tr>
+        <tr>
+            <td class="title">Brave New World</td>
+            <td class="author">Aldous Huxley</td>
+            <td class="page-count">268</td>
+            <td class="completed">NO</td>
+            <td class="remove"><button class="remove-btn">Remove</button></td>
+        </tr>
+        <tr>
+            <td class="title">Crime and Punishment</td>
+            <td class="author">Fyodor Dostoyevsky</td>
+            <td class="page-count">720</td>
+            <td class="completed">Completed</td>
+            <td class="remove"><button class="remove-btn">Remove</button></td>
         </tr>
     </table>
 </body>
